--- a/api/build.gradle
+++ b/api/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation 'com.amazonaws:elasticache-java-cluster-client:1.1.1'
+    implementation 'net.spy:spymemcached:2.12.3'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.guava:guava:23.4-jre'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
