--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ar.edu.utn.frba.mobile.a2019c1.superheroes">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
             android:allowBackup="true"
@@ -16,7 +16,7 @@
                 android:label="@string/title_activity_main">
         </activity>
         <activity
-                android:name=".ui.login.LoginActivity"
+                android:name=".ui.registration.RegistrationActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
