--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Design.NoActionBar"
+            android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
         <activity
                 android:name=".MainActivity"
@@ -18,6 +18,7 @@
         </activity>
         <activity
                 android:name=".ui.registration.RegistrationActivity"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
