--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <activity android:name=".ui.bundle.ShowCards">
+        </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/title_activity_main">
         </activity>
         <activity
                 android:name=".ui.registration.RegistrationActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
