--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <activity android:name=".ui.cards.ShowSingleCard">
+        </activity>
         <activity
                 android:name=".ui.bundle.ShowCards"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
