--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,6 +14,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <activity android:name=".ui.fight.FightResultActivity">
+        </activity>
         <activity android:name=".ui.cards.ShowSingleCard">
         </activity>
         <activity
@@ -35,7 +38,8 @@
         </activity>
         <activity
                 android:name=".ui.fight.FightSearchActivity"
-                android:label="FightSearchActivity">
+                android:label="FightSearchActivity"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
     </application>
 
