--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,27 @@
         <activity
                 android:name=".ui.fight.FightResultActivity"
                 android:label="FightResultActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.cards.ShowSingleCard">
+        <activity android:name=".ui.cards.ShowSingleCard"
+                  android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".ui.bundle.ShowCards"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:label="@string/title_activity_main">
+                android:label="@string/title_activity_main"
+                android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".ui.registration.RegistrationActivity"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -42,7 +47,8 @@
         <activity
                 android:name=".ui.fight.FightSearchActivity"
                 android:label="FightSearchActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                android:screenOrientation="portrait">
         </activity>
     </application>
 
