--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
+    implementation "android.arch.work:work-runtime-ktx:1.0.0-beta01"
+    androidTestImplementation "android.arch.work:work-testing:1.0.0-beta01"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
